--- a/pytest.ini
+++ b/pytest.ini
@@ -27,17 +27,8 @@ python_paths = src
 #      * --cov-report=xml:coverage.xml – сохранение XML-файла coverage.xml
 #      * --cov=src/zilant_prime_core – покрытие всех модулей внутри src/zilant_prime_core
 addopts =
-    -v
-    -ra
-    --color=yes
-    --showlocals
-    --disable-warnings
+    -q
     --maxfail=1
-    --durations=10
-    --cov=src/zilant_prime_core
-    --cov-report=term-missing
-    --cov-report=html:htmlcov
-    --cov-report=xml:coverage.xml
 
 # Подавлять DeprecationWarning и PendingDeprecationWarning из внешних библиотек
 filterwarnings =
@@ -48,4 +39,4 @@ filterwarnings =
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks integration tests
-    performance: marks performance/load tests
+    perf: performance benchmarks (skip by default)
