--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Run Semgrep
         run: semgrep ci
       - run: pytest -q
+      - name: Run screen-guard tests
+        run: pytest -q tests/test_screen_guard.py
 
   perf:
     needs: quality
