--- a/.github/workflows/zilant-ci.yml
+++ b/.github/workflows/zilant-ci.yml
@@ -37,6 +37,10 @@ jobs:
       - run: pip install -e .[dev]
       - name: Build PQ Wheels
         run: python tools/build_pq_wheels.py
+      - name: Setup Pandoc
+        uses: stefanzweifel/setup-pandoc@v3
+        with:
+          version: '3.4.1'
       - name: Generate Whitepaper
         run: python tools/gen_whitepaper.py
       - name: Generate ISO27001 SoA
