--- a/.github/workflows/zilant-ci.yml
+++ b/.github/workflows/zilant-ci.yml
@@ -40,7 +40,13 @@ jobs:
       - name: Install Pandoc
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc texlive-latex-base
+          sudo apt-get install -y \
+            pandoc \
+            texlive-latex-base \
+            texlive-latex-recommended \
+            texlive-latex-extra \
+            texlive-fonts-recommended \
+            texlive-fonts-extra
           pandoc --version
       - name: Generate Whitepaper
         run: python tools/gen_whitepaper.py
