--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,21 @@
 [mypy]
 python_version = 3.13
-strict = True
-allow_untyped_decorators = True
-warn_return_any = False
 ignore_missing_imports = True
-disable_error_code = attr-defined,type-arg,import-untyped,no-untyped-def,no-any-return,union-attr
-exclude = /(tests|docs)/
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
+disallow_untyped_calls = False
+disallow_any_generics = False
+no_implicit_optional = True
+warn_unused_ignores = True
+warn_return_any = True
+warn_unused_configs = True
+show_error_codes = True
+strict_equality = True
+pretty = True
+color_output = True
+follow_imports = skip
+
+# Ignore missing stubs for requests
+[mypy-requests.*]
+ignore_missing_imports = True
