--- a/pytest.ini
+++ b/pytest.ini
@@ -1,42 +1,37 @@
-# pytest.ini
+# mypy.ini — рабочий, без deprecated и с актуальными опциями
+[mypy]
+python_version = 3.13
+ignore_missing_imports = true
+follow_imports = normal
+show_column_numbers = true
+pretty = true
+warn_unused_ignores = true
+warn_return_any = true
+warn_unreachable = true
+disallow_untyped_defs = true
+check_untyped_defs = true
+no_implicit_optional = true
 
-[pytest]
-# Минимальная требуемая версия pytest
-minversion = 7.0
+# Не указывай disable_error_code: import-untyped — такой код не существует (это и была твоя ошибка)
+# Лучше явно игнорить missing imports (что и делает ignore_missing_imports = true)
 
-# Где искать тесты
-testpaths = tests
+[mypy-requests.*]
+ignore_missing_imports = true
 
-# Какие файлы считаем тестами
-python_files = test_*.py
+[mypy-pytest.*]
+ignore_missing_imports = true
 
-# Добавить папку src/ в PYTHONPATH перед запуском (альтернатива conftest.py)
-python_paths = src
+[mypy-pqclean.*]
+ignore_missing_imports = true
 
-# Опции запуска:
-#  - подробный режим (-v)
-#  - показать пропущенные и упавшие тесты (-ra)
-#  - цветной вывод
-#  - показывать локальные переменные при падении (--showlocals)
-#  - отключить лишние предупреждения (--disable-warnings)
-#  - остановиться после первой упавшей проверки (--maxfail=1)
-#  - вывести 10 самых медленных тестов (--durations=10)
-#  - включить замер покрытия:
-#      * --cov-report=term-missing  – отчёт в терминал с указанием непокрытых строк
-#      * --cov-report=html:htmlcov  – сохранение HTML-каталога htmlcov/
-#      * --cov-report=xml:coverage.xml – сохранение XML-файла coverage.xml
-#      * --cov=src/zilant_prime_core – покрытие всех модулей внутри src/zilant_prime_core
-addopts =
-    -q
-    --maxfail=1
+[mypy-oqs.*]
+ignore_missing_imports = true
 
-# Подавлять DeprecationWarning и PendingDeprecationWarning из внешних библиотек
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning
+[mypy-cryptography.*]
+ignore_missing_imports = true
 
-# При маркировке тестов (опционально)
-markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
-    integration: marks integration tests
-    perf: performance benchmarks (skip by default)
+[mypy-psutil.*]
+ignore_missing_imports = true
+
+[mypy-tests.*]
+ignore_errors = true
