Full 100% coverage, lint, mypy, isort, CI warning fix

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,27 @@
-# mypy.ini — рабочий, без deprecated и с актуальными опциями
+# pytest.ini — Топовая конфигурация для тестирования Zilant Prime Core
+[pytest]
+minversion = 7.0
+addopts = -ra -q
+testpaths =
+    tests
+
+# — Регистрация кастомных маркеров (чтобы не было UnknownMarkWarning)
+markers =
+    perf: mark test as performance (deselect with '-m "not perf"')
+    slow: mark test as slow
+    heavy: mark test as heavy (long, cryptography, monkeypatch)
+
+# — Список игнорируемых предупреждений (убирает warnings по потокам и mark)
+filterwarnings =
+    ignore::pytest.PytestUnknownMarkWarning
+    ignore::pytest.PytestUnhandledThreadExceptionWarning
+
+# — (Дополнительно) Можно отключить DeprecationWarning от внешних библиотек:
+    ignore::DeprecationWarning
+
+# — (Чисто для порядка) — если появятся свои кастомные маркеры, просто добавь сюда
+
+# — Мypy-секция для типов и статики (оставляем твою секцию без изменений)
 [mypy]
 python_version = 3.13
 ignore_missing_imports = true
@@ -11,9 +34,6 @@ warn_unreachable = true
 disallow_untyped_defs = true
 check_untyped_defs = true
 no_implicit_optional = true
-
-# Не указывай disable_error_code: import-untyped — такой код не существует (это и была твоя ошибка)
-# Лучше явно игнорить missing imports (что и делает ignore_missing_imports = true)
 
 [mypy-requests.*]
 ignore_missing_imports = true
