--- a/mypy.ini
+++ b/mypy.ini
@@ -1,21 +1,44 @@
 [mypy]
 python_version = 3.13
-ignore_missing_imports = True
-disallow_untyped_defs = True
-disallow_incomplete_defs = True
-check_untyped_defs = True
-disallow_untyped_calls = False
-disallow_any_generics = False
-no_implicit_optional = True
-warn_unused_ignores = True
-warn_return_any = True
-warn_unused_configs = True
-show_error_codes = True
-strict_equality = True
-pretty = True
-color_output = True
+ignore_missing_imports = true
 follow_imports = skip
+show_column_numbers = true
+pretty = true
+color_output = true
 
-# Ignore missing stubs for requests
+# strict settings
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unused_configs = true
+show_error_codes = true
+
+# allow decorators without type annotations
+ignore_untyped_decorators = true
+
+# if you still see "Unused type: ignore" warnings, uncomment:
+# warn_unused_ignores = false
+
+# per-module overrides
 [mypy-requests.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
+
+[mypy-pytest.*]
+ignore_missing_imports = true
+
+[mypy-pqclean.*]
+ignore_missing_imports = true
+
+[mypy-oqs.*]
+ignore_missing_imports = true
+
+[mypy-cryptography.*]
+ignore_missing_imports = true
+
+[mypy-psutil.*]
+ignore_missing_imports = true
+
+[mypy-tests.*]
+ignore_errors = true
