--- a/mypy.ini
+++ b/mypy.ini
@@ -6,7 +6,7 @@ show_column_numbers = true
 pretty = true
 color_output = true
 
-# strict settings
+# Strict checks
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 check_untyped_defs = true
@@ -15,13 +15,10 @@ warn_return_any = true
 warn_unused_configs = true
 show_error_codes = true
 
-# allow decorators without type annotations
-ignore_untyped_decorators = true
+# Suppress decorator errors (misc)
+disable_error_code = misc,unused-ignore
 
-# if you still see "Unused type: ignore" warnings, uncomment:
-# warn_unused_ignores = false
-
-# per-module overrides
+# Module-specific overrides
 [mypy-requests.*]
 ignore_missing_imports = true
 
