--- a/.github/workflows/zilant-ci.yml
+++ b/.github/workflows/zilant-ci.yml
@@ -2,73 +2,48 @@ name: zilant-ci
 
 on:
   push:
-    branches:
-      - main
-      - ci-check-ready
+    branches: [ main, ci-check-ready ]
   pull_request:
-    branches:
-      - main
-      - ci-check-ready
+    branches: [ main, ci-check-ready ]
 
 jobs:
   quality:
     name: quality
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-
-      - name: Install dev dependencies
-        run: pip install -e .[dev]
-
-      - name: Pre-commit hooks
-        run: pre-commit run --all-files
-
-      - name: Ruff
-        run: ruff check .
-
-      - name: Black
-        run: black --check .
-
-      - name: isort
-        run: isort --check-only .
-
-      - name: Bandit
-        run: bandit -r src -ll
-
-      - name: Semgrep CI
-        run: semgrep ci
-
-      - name: Mypy
-        run: mypy --config-file mypy.ini src
-
-      - name: Pytest
-        run: pytest -q
+      - run: pip install -e .[dev]
+      - run: pre-commit run --all-files
+      - run: ruff check .
+      - run: black --check .
+      - run: isort --check-only .
+      - run: bandit -r src -ll
+      - run: semgrep ci
+      - run: mypy --config-file mypy.ini src
+      - run: pytest -q
 
   perf:
     name: perf
     runs-on: ubuntu-latest
+    needs: quality
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: '3.13' }
+        with:
+          python-version: '3.13'
       - run: pip install -e .[dev]
       - run: pytest -q --maxfail=1 --disable-warnings -m perf
 
   build:
     name: build
     runs-on: ubuntu-latest
+    needs: [ quality, perf ]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.13'
 
@@ -88,8 +63,8 @@ jobs:
 
       - name: Generate Whitepaper
         run: |
-          pandoc \
-            docs/whitepaper.md \
+          mkdir -p dist
+          pandoc docs/whitepaper.md \
             docs/ARCH.md \
             docs/THREATS.md \
             --metadata-file docs/whitepaper.yml \
@@ -104,16 +79,20 @@ jobs:
           name: whitepaper
           path: dist/whitepaper.pdf
 
-  sign:
-    name: sign
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.13' }
-      - run: pip install -e .[dev]
-      - run: python tools/sign_artifacts.py
-      - uses: actions/upload-artifact@v4
-        with:
-          name: signed-artifacts
-          path: signed/*
+# Job "sign" отключён — добавьте свой скрипт подписи или удалите entirely
+#  sign:
+#    name: sign
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: '3.13'
+#      - run: pip install -e .[dev]
+#      - name: Sign artifacts
+#        run: python tools/sign_artifacts.py
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: signed-artifacts
+#          path: signed/*
