--- a/mypy.ini
+++ b/mypy.ini
@@ -15,10 +15,10 @@ warn_return_any = true
 warn_unused_configs = true
 show_error_codes = true
 
-# Suppress decorator errors (misc)
+# Silence decorator and unused-ignore errors
 disable_error_code = misc,unused-ignore
 
-# Module-specific overrides
+# Per-module overrides
 [mypy-requests.*]
 ignore_missing_imports = true
 
