--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -2,73 +2,116 @@ name: Quality
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main, ci-check-ready ]
   pull_request:
-    branches: ["main"]
+    branches: [ main, ci-check-ready ]
 
+# ------------------------------------------------------------
 jobs:
+# --------------------------- lint / type‑check / tests -------
   quality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: pip install .[metrics,notify] -r requirements-dev.txt
-      - name: Pre-commit
-        run: pre-commit run --all-files --show-diff-on-failure
-      - run: ruff check .
-      - run: black --check .
-      - run: isort --check-only .
-      - run: bandit -r src -ll
-      - name: Run Semgrep
-        run: semgrep ci
-      - run: pytest -q
-      - name: Run screen-guard tests
-        run: pytest -q tests/test_screen_guard.py
-      - name: Run guard_v2 tests
-        run: pytest -q tests/test_honeyfile.py tests/test_hash_challenge.py
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with: { python-version: '3.13' }
+
+      - name: Install dev‑deps
+        run: pip install -e .[dev]
+
+      - name: Pre‑commit (format & hooks)
+        run: pre-commit run --all-files
+
+      - name: Ruff
+        run: ruff check .
+
+      - name: Black
+        run: black --check .
+
+      - name: isort
+        run: isort --check-only .
+
+      - name: Bandit
+        run: bandit -r src -ll
+
+      - name: Semgrep
+        run: semgrep ci
+
+      - name: Mypy
+        run: mypy --config-file mypy.ini src
+
+      - name: Pytest
+        run: pytest -q
+
+# --------------------------- performance subset --------------
   perf:
-    needs: quality
+    needs: quality          # запускаем ТОЛЬКО если quality зелёный
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
+        with: { python-version: '3.13' }
       - run: pip install -e .[dev]
-      - run: pytest -q -m perf
+      - run: pytest -q -m perf --disable-warnings --maxfail=1
+
+# --------------------------- build wheels + whitepaper -------
   build-pq:
-    needs: quality
+    needs: [ quality, perf ]   # выполняем после обоих
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: python tools/build_pq_wheels.py
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.13' }
+
+      - name: Install build deps
+        run: pip install -e .[dev] build pyyaml
+
+      # ---------- wheels ----------
+      - name: Build PQ wheels
+        run: python tools/build_pq_wheels.py
+
       - uses: actions/upload-artifact@v4
         with:
           name: pq-wheels
-          path: whl/*.whl
-      - name: Install Pandoc & LaTeX
+          path: dist/*.whl
+
+      # ---------- whitepaper ----------
+      - name: Install Pandoc + XeLaTeX
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            pandoc \
-            texlive-latex-base \
-            texlive-latex-recommended \
-            texlive-latex-extra \
-            texlive-fonts-recommended \
-            texlive-fonts-extra
-      - name: Generate Whitepaper
+          sudo apt-get update -qq
+          sudo apt-get install -y pandoc texlive-xetex fonts-noto
+
+      - name: Generate whitepaper PDF
         run: python tools/gen_whitepaper.py
+
       - uses: actions/upload-artifact@v4
         with:
           name: whitepaper
           path: dist/whitepaper.pdf
-      - name: Generate ISO27001 SoA
+
+      # ---------- ISO 27001 SoA ----------
+      - name: Generate ISO27001 SoA
         run: python tools/iso_soa_generator.py
+
       - uses: actions/upload-artifact@v4
         with:
           name: iso-soa
           path: docs/SoA_ISO27001.md
+
+# --------------------------- подпись (пока выключено) --------
+#  sign:
+#    needs: build-pq
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-python@v5
+#        with: { python-version: '3.13' }
+#      - run: pip install -e .[dev]
+#      - name: Sign artifacts
+#        run: python tools/sign_artifacts.py
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: signed
+#          path: dist/*.sha256
