--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,4 +1,4 @@
-name: Quality
+name: Quality / CI pipeline
 
 on:
   push:
@@ -6,22 +6,22 @@ on:
   pull_request:
     branches: [ main, ci-check-ready ]
 
-# ------------------------------------------------------------
+# -------------------------------------------------------------------
 jobs:
-# --------------------------- lint / type‑check / tests -------
+# ──────────────────────────── Lint + type + tests ───────────────────
   quality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set‑up Python
         uses: actions/setup-python@v5
-        with: { python-version: '3.13' }
+        with: { python-version: "3.13" }
 
       - name: Install dev‑deps
         run: pip install -e .[dev]
 
-      - name: Pre‑commit (format & hooks)
+      - name: Pre‑commit
         run: pre-commit run --all-files
 
       - name: Ruff
@@ -36,7 +36,7 @@ jobs:
       - name: Bandit
         run: bandit -r src -ll
 
-      - name: Semgrep
+      - name: Semgrep (SAST)
         run: semgrep ci
 
       - name: Mypy
@@ -45,45 +45,45 @@ jobs:
       - name: Pytest
         run: pytest -q
 
-# --------------------------- performance subset --------------
+# ──────────────────────────── Perf subset ───────────────────────────
   perf:
-    needs: quality          # запускаем ТОЛЬКО если quality зелёный
+    needs: quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: '3.13' }
+        with: { python-version: "3.13" }
       - run: pip install -e .[dev]
       - run: pytest -q -m perf --disable-warnings --maxfail=1
 
-# --------------------------- build wheels + whitepaper -------
+# ──────────────────────────── Build + artefacts ─────────────────────
   build-pq:
-    needs: [ quality, perf ]   # выполняем после обоих
+    needs: [ quality, perf ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: '3.13' }
+        with: { python-version: "3.13" }
 
-      - name: Install build deps
+      - name: Install build deps
         run: pip install -e .[dev] build pyyaml
 
       # ---------- wheels ----------
-      - name: Build PQ wheels
+      - name: Build wheels
         run: python tools/build_pq_wheels.py
 
       - uses: actions/upload-artifact@v4
         with:
-          name: pq-wheels
+          name: wheels
           path: dist/*.whl
 
-      # ---------- whitepaper ----------
-      - name: Install Pandoc + XeLaTeX
+      # ---------- Whitepaper ----------
+      - name: Install Pandoc + XeLaTeX (русский шрифт)
         run: |
           sudo apt-get update -qq
-          sudo apt-get install -y pandoc texlive-xetex fonts-noto
+          sudo apt-get install -y pandoc texlive-xetex texlive-lang-cyrillic
 
-      - name: Generate whitepaper PDF
+      - name: Generate whitepaper
         run: python tools/gen_whitepaper.py
 
       - uses: actions/upload-artifact@v4
@@ -91,27 +91,17 @@ jobs:
           name: whitepaper
           path: dist/whitepaper.pdf
 
-      # ---------- ISO 27001 SoA ----------
-      - name: Generate ISO27001 SoA
-        run: python tools/iso_soa_generator.py
+      # ---------- ISO 27001 SoA (опционно) ----------
+      - name: Generate ISO 27001 SoA (if controls present)
+        run: |
+          if [ -f docs/iso_controls.yml ]; then
+            python tools/iso_soa_generator.py
+          else
+            echo "No docs/iso_controls.yml — skipping SoA generation"
+          fi
 
       - uses: actions/upload-artifact@v4
+        if: ${{ hashFiles('docs/SoA_ISO27001.md') != '' }}
         with:
           name: iso-soa
           path: docs/SoA_ISO27001.md
-
-# --------------------------- подпись (пока выключено) --------
-#  sign:
-#    needs: build-pq
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-python@v5
-#        with: { python-version: '3.13' }
-#      - run: pip install -e .[dev]
-#      - name: Sign artifacts
-#        run: python tools/sign_artifacts.py
-#      - uses: actions/upload-artifact@v4
-#        with:
-#          name: signed
-#          path: dist/*.sha256
