ci: skip fuzz in perf job

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -53,9 +53,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with: { python-version: "3.13" }
-      - run: pip install -e .[dev] atheris
-      - run: pytest -q -m perf --disable-warnings --maxfail=1
-      - run: python -m atheris tests/fuzz/test_container_fuzz.py
+      - run: pip install -e .[dev]
+      - run: SKIP_FUZZ=1 ZILANT_ALLOW_ROOT=1 pytest -q -m perf --disable-warnings --maxfail=1
 
 # ──────────────────────────── Build + artefacts ─────────────────────
   build-pq:
