--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,49 +1,35 @@
 # .github/workflows/codeql-analysis.yml
-name: CodeQL Analysis
+# SPDX-License-Identifier: MIT
+# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+
+name: CodeQL
 
 on:
   push:
-    branches:
-      - main
-      - ci-check-ready
+    branches: [main]
   pull_request:
-    branches:
-      - main
-      - ci-check-ready
+  schedule:
+    - cron: '38 7 * * 4'
 
 permissions:
-  contents: read        # for actions/checkout
-  security-events: write  # to upload CodeQL results
+  contents: read
+  actions: read
+  security-events: write
+  id-token: write
 
 jobs:
   analyze:
-    name: Analyze code with CodeQL
+    name: Analyze (Python)
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ['python']
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+      - uses: actions/checkout@v4
+      - uses: github/codeql-action/init@v3
         with:
-          languages: python
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
-          # Upload SARIF so GitHub can display results
-          upload: true
-          # Only run queries in the CodeQL default suite
-          category: "/language:python"
-
-      # [Optional] if you have custom queries:
-      # - name: Checkout custom queries
-      #   run: |
-      #     git clone https://github.com/your-org/your-codeql-queries.git codeql-custom
-      # - name: Run custom queries
-      #   uses: github/codeql-action/analyze@v3
-      #   with:
-      #     queries: codeql-custom/python-queries
+          languages: ${{ matrix.language }}
+      - uses: github/codeql-action/autobuild@v3
+      - uses: github/codeql-action/analyze@v3
