--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,4 +1,3 @@
-# .github/workflows/static-analysis.yml
 # SPDX-License-Identifier: MIT
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 
@@ -18,11 +17,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: returntocorp/semgrep-action@v1
+
+      - name: Run Semgrep
+        uses: returntocorp/semgrep-action@v1
         with:
           config: p/python
           generateSarif: true
-      - name: Upload SARIF
+          sarifFile: semgrep.sarif          # ← имя файла задаём явно
+
+      - name: Upload SARIF to CodeQL
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
