--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   build-test:
-    name: Lint & Test (Python ${{ matrix.python-version }})
+    name: Lint & Test (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -23,13 +23,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           cache: pip
 
-      - name: Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install ".[dev]"
@@ -40,23 +40,24 @@ jobs:
           black --check src tests
           mypy src
 
-      - name: Unit tests with coverage
+      - name: Unit tests with coverage
         run: |
           pytest --cov=src --cov-report=xml
 
-      - name: Upload coverage to Codecov
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
 
   trivy-scan:
-    name: Trivy SCA / CVE scan
+    name: Trivy SCA / CVE scan
     runs-on: ubuntu-latest
     needs: build-test
     steps:
       - uses: actions/checkout@v4
 
-      - name: Trivy scan
-        uses: aquasecurity/trivy-action@0.20.0   # без префикса «v»
+      - name: Trivy scan (vuln only)
+        uses: aquasecurity/trivy-action@0.20.0
         with:
           scan-type: fs
+          security-checks: vuln           # ← сканируем только уязвимости, пропуская секреты
           ignore-unfixed: true
           exit-code: '1'
