ci: remove secret scanning, use scanners: vuln for Trivy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,6 @@ jobs:
         uses: aquasecurity/trivy-action@0.20.0
         with:
           scan-type: fs
-          security-checks: vuln           # ← сканируем только уязвимости, пропуская секреты
+          scanners: vuln           # ← только vulnerability scanner
           ignore-unfixed: true
           exit-code: '1'
