ci: restore CodeQL workflow; fix Semgrep SARIF & Trivy vuln-only scan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -58,6 +57,6 @@ jobs:
         uses: aquasecurity/trivy-action@0.20.0
         with:
           scan-type: fs
-          scanners: vuln           # ← только vulnerability scanner
+          scanners: vuln
           ignore-unfixed: true
           exit-code: '1'
