--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,4 +1,3 @@
-# .github/workflows/codeql-analysis.yml
 # SPDX-License-Identifier: MIT
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 
@@ -8,18 +7,16 @@ on:
   push:
     branches: [main]
   pull_request:
-  schedule:
-    - cron: '38 7 * * 4'
+    branches: [main]
 
 permissions:
   contents: read
-  actions: read
   security-events: write
   id-token: write
 
 jobs:
   analyze:
-    name: Analyze (Python)
+    name: Analyze (Python)
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -28,8 +25,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: github/codeql-action/init@v3
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
-      - uses: github/codeql-action/autobuild@v3
-      - uses: github/codeql-action/analyze@v3
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Run CodeQL analysis
+        uses: github/codeql-action/analyze@v3
