--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
         python-version: ['3.11', '3.12', '3.13']
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: pip
@@ -43,6 +43,15 @@ jobs:
         run: |
           pytest --cov=src --cov-report=xml
 
+      - name: Build PQ wheels
+        run: python tools/build_pq_wheels.py
+
+      - name: Upload PQ wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: pq-wheels
+          path: dist/*_pq*.whl
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
 
@@ -51,7 +60,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Trivy scan (vuln only)
         uses: aquasecurity/trivy-action@0.20.0
