Add fuzzing, docs diagram, security policies

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,3 +49,11 @@ repos:
         additional_dependencies: ["types-requests"]
         language_version: python3
         files: ^src/zilant_prime_core/(?!scripts/).*\.py$
+
+  - repo: local
+    hooks:
+      - id: fuzz
+        name: atheris fuzz
+        entry: python tools/atheris_fuzz.py --ci
+        language: system
+        pass_filenames: false
