--- a/.github/workflows/cosign-sign-artifacts.yml
+++ b/.github/workflows/cosign-sign-artifacts.yml
@@ -9,9 +9,13 @@ jobs:
   sign:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - run: pip install syft cyclonedx-cli cosign
       - run: syft . -o cyclonedx-json=sbom.json
       - run: cosign sign --key ${{ secrets.COSIGN_KEY }} sbom.json
       - run: cosign sign --key ${{ secrets.COSIGN_KEY }} dist/whitepaper.pdf
-      - run: cosign upload --key ${{ secrets.COSIGN_KEY }} dist/*.whl
+      - run: cosign upload --rekor-url $REKOR_URL --key ${{ secrets.COSIGN_KEY }} dist/*.whl
+      - run: cosign verify --rekor-url $REKOR_URL dist/*.whl
+    env:
+      REKOR_URL: ${{ secrets.REKOR_URL }}
+      COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
