--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -7,9 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with: {python-version: '3.x'}
       - name: Install dependencies
         run: |
@@ -17,6 +17,7 @@ jobs:
       - name: Build docs
         run: |
           cd docs
+          make mermaid
           make html
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
