--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -26,6 +26,7 @@ argon2-cffi>=23.1.0
 cryptography>=42.0.0
 filelock>=3.13.0
 pre-commit>=2.20.0
+atheris>=2.1.0
 
 # Метрики и веб-сервер
 flask>=2.2.0
