--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ dev = [
   "filelock>=3.13,<4.0",
   "build",
   "twine",
-  "atheris>=2.1",
+  "atheris>=2.1; python_version < '3.12'",
 ]
 pq = [
   "pqclean[kyber768]",
