--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,14 @@ classifiers     = [
 ]
 
 dependencies = [
-  "cryptography>=42.0,<43.0",
+  "cryptography>=38.0.4,<43.0",
   "argon2-cffi>=23.1,<24.0",
   "click>=8.1,<9.0",
   "hvac>=2.3,<3.0",
   "flask>=2.2,<3.0",
   "prometheus-client>=0.16.0,<1.0",
   "shamir>=0.1",
+  "pynacl>=1.5,<2.0",
 ]
 
 [project.scripts]
