--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -23,8 +23,9 @@ hvac>=2.3.0,<3.0.0
 
 # Прочее:
 argon2-cffi>=23.1.0
-cryptography>=42.0.0
+cryptography>=38.0.4
 filelock>=3.13.0
+pynacl>=1.5.0
 pre-commit>=2.20.0
 atheris>=2.1.0; python_version < "3.12"
 
