--- a/.github/workflows/lint-docs.yml
+++ b/.github/workflows/lint-docs.yml
@@ -8,10 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
       - run: npm install -g @mermaid-js/mermaid-cli
+      - run: pip install -e .[docs]
+      - name: Build docs
+        run: make docs
       - name: Verify docs files
         run: |
           test -f SECURITY.md
