--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,3 +133,6 @@ warn_return_any          = false
 ignore_missing_imports   = true
 disable_error_code       = ["attr-defined"]
 exclude                  = '(^(src/zil\.py)|^scripts/)'
+
+[tool.zilant]
+pq_mode = "classic"
