--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "prometheus-client>=0.16.0,<1.0",
   "shamir>=0.1",
   "pynacl>=1.5,<2.0",
+  "PyQt5>=5.15,<6.0",
 ]
 
 [project.scripts]
@@ -68,6 +69,7 @@ dev = [
   "build",
   "twine",
   "atheris>=2.1; python_version < '3.12'",
+  "pyinstaller>=6.0",
 ]
 pq = [
   "pqclean[kyber768]",
