--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "prometheus-client>=0.16.0,<1.0",
   "shamir>=0.1",
   "pynacl>=1.5,<2.0",
+  "boto3>=1.28,<2.0",
   "PyQt5>=5.15,<6.0",
   "PyYAML>=6.0,<7.0",
 ]
@@ -141,3 +142,4 @@ exclude                  = '(^(src/zil\.py)|^scripts/)'
 
 [tool.zilant]
 pq_mode = "classic"
+backend_type = "local"
