--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 # SPDX-License-Identifier: MIT
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 
@@ -18,40 +19,74 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.11', '3.12', '3.13']
-
+        python-version: [3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: pip
 
-      - name: Install dependencies
+      - name: Install dev dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ".[dev]"
+          pip install -r requirements-dev.txt
 
-      - name: Lint
-        run: |
-          ruff check src tests
-          black --check src tests
-          mypy src
+      - name: pre-commit run --all-files
+        run: pre-commit run --all-files
 
-      - name: Unit tests with coverage
-        run: |
-          pytest --cov=src --cov-report=xml
+      - name: Ruff (lint)
+        run: ruff check src tests
+
+      - name: Black (format check)
+        run: black --check src tests
+
+      - name: isort (imports)
+        run: isort --check-only src tests
+
+      - name: mypy (type check)
+        run: mypy src
+
+      - name: pytest with coverage
+        run: pytest --cov=src --cov-report=xml
 
       - name: Build PQ wheels
         run: python tools/build_pq_wheels.py
-      - uses: actions/upload-artifact@v4
+
+      - name: Upload PQ wheels
+        uses: actions/upload-artifact@v4
         with:
           name: pq-wheels
-          path: dist/*_pq*.whl
+          # теперь забираем все .whl из dist/
+          path: dist/*.whl
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+  semgrep:
+    name: Semgrep SAST
+    runs-on: ubuntu-latest
+    needs: build-test
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Semgrep
+        uses: returntocorp/semgrep-action@v1
+        with:
+          semgrep_rules: "p/python"
+
+  codeql:
+    name: CodeQL Analysis
+    runs-on: ubuntu-latest
+    needs: build-test
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: python
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
 
   trivy-scan:
     name: Trivy SCA / CVE scan
@@ -61,7 +96,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Trivy scan (vuln only)
-        uses: aquasecurity/trivy-action@0.20.0
+        uses: aquasecurity/trivy-action@v0.20.0
         with:
           scan-type: fs
           scanners: vuln
