Fix pre-commit mypy hook

--- a/mypy.ini
+++ b/mypy.ini
@@ -15,8 +15,8 @@ warn_return_any = true
 warn_unused_configs = true
 show_error_codes = true
 
-# Silence decorator and unused-ignore errors
-disable_error_code = misc,unused-ignore
+# Silence decorator errors
+disable_error_code = misc
 
 # Per-module overrides
 [mypy-requests.*]
