--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ dependencies = [
   "boto3>=1.28,<2.0",
   "PyQt5>=5.15,<6.0",
   "PyYAML>=6.0,<7.0",
+  "zstandard>=0.23.0",
+  "tqdm>=4.66.0",
+  "psutil>=5.9.0",
 ]
 
 [project.scripts]
@@ -74,6 +77,9 @@ dev = [
   "pyinstaller>=6.0",
   "types-PyYAML>=6.0",
   "PyYAML>=6.0,<7.0",
+  "zstandard>=0.23.0",
+  "tqdm>=4.66.0",
+  "psutil>=5.9.0",
 ]
 pq = [
   "pqclean[kyber768]",
