--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -67,7 +67,7 @@ jobs:
       - uses: actions/setup-python@v5
         with: { python-version: "3.13" }
       - run: pip install -e .[dev]
-      - run: pytest -q tests/test_stream_large.py
+      - run: pytest -q tests/test_stream_large.py tests/test_stream_resume.py
 
   cli-polish:
     needs: quality
