--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
   "zstandard>=0.23.0",
   "tqdm>=4.66.0",
   "psutil>=5.9.0",
+  "opentelemetry-sdk>=1.23,<2.0",
 ]
 
 [project.scripts]
@@ -80,6 +81,7 @@ dev = [
   "zstandard>=0.23.0",
   "tqdm>=4.66.0",
   "psutil>=5.9.0",
+  "opentelemetry-sdk>=1.23,<2.0",
 ]
 pq = [
   "pqclean[kyber768]",
