Add hpke CLI and stream verify

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Run Semgrep
         uses: returntocorp/semgrep-action@v1
         with:
-          config: ./.semgrep.yml
+          config: |
+            p/python
+            ./.semgrep.yml
+            ./.semgrep/custom
           generateSarif: true
           publishSarif: true
