--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install ".[dev]"
 
+      - name: Install linters
+        run: |
+          pip install ruff black isort mypy
+
       - name: Lint
         run: |
           ruff check src tests
