--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -13,7 +13,7 @@ jobs:
         with: {python-version: '3.x'}
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx-rtd-theme
+          pip install sphinx sphinx-rtd-theme m2r2
       - name: Build docs
         run: |
           cd docs
