--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dev‑deps
         run: pip install -e .[dev]
 
-      - name: Install linters
-        run: pip install ruff black isort mypy
+      - name: Install linters & test tools
+        run: pip install pytest ruff black isort mypy sphinx prometheus_client
 
       - name: Pre‑commit
         run: pre-commit run --all-files
@@ -40,7 +40,7 @@ jobs:
         run: bandit -r src -ll
 
       - name: Semgrep (SAST)
-        run: semgrep ci
+        run: semgrep ci --metrics=off
 
       - name: Mypy
         run: mypy --config-file mypy.ini src
