--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -24,3 +24,4 @@ jobs:
           config: ./.semgrep.yml
           generateSarif: true
           publishSarif: true
+          args: --metrics=off
