--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,6 +13,10 @@ ruff>=0.2.0
 black>=23.1.0
 isort>=5.10.1
 mypy>=1.8.0
+sphinx>=7.0
+m2r2
+sphinx-autodoc-typehints
+sphinxcontrib-mermaid
 
 # Security:
 bandit>=1.7.0
@@ -40,3 +44,5 @@ boto3>=1.28.0
 zstandard>=0.23.0
 tqdm>=4.66.0
 psutil>=5.9.0
+opentelemetry-sdk>=1.20.0
+opentelemetry-exporter-otlp>=1.20.0
