--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ pytest-timeout
 hypothesis
 PyQt5>=5.15
 PyYAML>=6.0
+opentelemetry-sdk>=1.20.0
+opentelemetry-exporter-otlp>=1.20.0
 boto3>=1.28.0
 zstandard>=0.23.0
 tqdm>=4.66.0
