--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dev = [
     "mypy>=1.8.0",
     "sphinx>=7.0",
     "filelock>=3.13.0",
+    "pytest-cov>=5.0.0",
+    "hvac>=2.3.0",
     "prometheus-client>=0.16.0",
     "opentelemetry-sdk>=1.20.0",
     "opentelemetry-exporter-otlp>=1.20.0",
