Fix TOML parsing + correct Semgrep args

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -21,9 +21,7 @@ jobs:
       - name: Run Semgrep
         uses: returntocorp/semgrep-action@v1
         with:
-          config: |
-            p/python
-            ./.semgrep.yml
+          config: .semgrep.yml
             ./.semgrep/custom
           generateSarif: true
           publishSarif: true
